--- a/app/profile/page.module.scss
+++ b/app/profile/page.module.scss
@@ -172,9 +172,12 @@
     position: relative;
   }
 
-  .bg {
+  .back {
     position: absolute;
     bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
     background: radial-gradient(67.82% 67.82% at 69.19% 41.44%, rgba(240, 96, 0, 0.7) 0%, rgba(255, 132, 0, 0) 100%),
       #ff8400;
 
@@ -428,6 +431,7 @@
       }
 
       &:last-of-type {
+        --color-white: #ffffff;
         margin-top: 30px;
         color: var(--color-white);
         background-color: var(--color-blue);
@@ -451,5 +455,35 @@
   }
   to {
     top: 100%;
+  }
+}
+
+html[data-theme='dark'] {
+  .bg {
+    background: radial-gradient(57.12% 57.12% at 50% 50%, #7b00ff 0%, #061d37 100%);
+
+    .circle1 {
+      background: radial-gradient(
+            118.81% 118.81% at 8.48% 84.53%,
+            rgba(140, 0, 255, 0) 0%,
+            rgba(140, 0, 255, 0.732414) 51.92%,
+            #ff2f00 78.38%,
+            #ffae00 100%
+          )
+          /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
+        #061d37;
+    }
+
+    .circle2 {
+      background: radial-gradient(
+            108.51% 108.51% at 41.82% 97.49%,
+            rgba(140, 0, 255, 0) 0%,
+            rgba(140, 0, 255, 0.732414) 51.92%,
+            #ff2f00 78.38%,
+            #ffae00 100%
+          )
+          /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
+        #061d37;
+    }
   }
 }
