--- a/components/Wrapper/Wrapper.module.scss
+++ b/components/Wrapper/Wrapper.module.scss
@@ -7,6 +7,8 @@
   // width: 100%;
   height: inherit;
   background-color: var(--bg-color);
+
+  transition: background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .popup {
