--- a/app/operations/page.module.scss
+++ b/app/operations/page.module.scss
@@ -91,7 +91,7 @@
           left: 0;
           right: 0;
           height: 1px;
-          background-color: var(--bg-color);
+          background-color: var(--color-category-border);
           border-radius: 1px;
         }
       }
