--- a/app/settings/page.module.scss
+++ b/app/settings/page.module.scss
@@ -3,28 +3,23 @@
 }
 
 .banner {
-  display: grid;
-  grid-template-rows: 1fr;
   --color-white: #ffffff;
   --color-bledny-blue: #dae7fa;
 
-  transition: grid-template-rows 0.25s linear, opacity 0.25s ease;
+  position: relative;
+  padding: 30px 15px 20px 15px;
+  overflow: hidden;
+  border-radius: 20px;
+  color: var(--color-white);
+
+  transition: opacity 0.25s ease;
 
   &.closing {
-    grid-template-rows: 0fr;
     opacity: 0;
   }
 
-  .inner {
+  > *:not(.bg) {
     position: relative;
-    padding: 30px 15px 20px 15px;
-    overflow: hidden;
-    border-radius: 20px;
-    color: var(--color-white);
-
-    > *:not(.bg) {
-      position: relative;
-    }
   }
 
   .bg {
