--- a/components/Wrapper/Wrapper.module.scss
+++ b/components/Wrapper/Wrapper.module.scss
@@ -144,7 +144,7 @@
       .icon {
         border-radius: 15px;
         overflow: hidden;
-        border: 1px solid var(--bg-color);
+        border: 1px solid var(--color-category-border);
         width: 45px;
         height: 45px;
 
@@ -236,7 +236,7 @@
         left: 10px;
         right: 10px;
         height: 1px;
-        background-color: var(--bg-color);
+        background-color: var(--color-category-border);
         border-radius: 1px;
       }
     }
