--- a/components/Wrapper/Wrapper.module.scss
+++ b/components/Wrapper/Wrapper.module.scss
@@ -8,7 +8,7 @@
   height: inherit;
   background-color: var(--bg-color);
 
-  transition: background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  // transition: background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .popup {
