--- a/app/profile/page.module.scss
+++ b/app/profile/page.module.scss
@@ -249,6 +249,7 @@
       padding: 10px;
       background-color: var(--bg-color);
       border-radius: 14px;
+      cursor: pointer;
 
       .basic {
         display: flex;
