--- a/components/Switch/Switch.module.scss
+++ b/components/Switch/Switch.module.scss
@@ -5,6 +5,7 @@
   border-radius: 20px;
   background-color: var(--color-orange);
   display: flex;
+  cursor: pointer;
 
   box-shadow: inset 0px 2px 2px rgba(61, 61, 81, 0.24);
 
