--- a/app/operations/expenses/page.module.scss
+++ b/app/operations/expenses/page.module.scss
@@ -56,7 +56,7 @@
       align-items: center;
       justify-content: flex-end;
 
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #ffffff 80%);
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, var(--color-white) 80%);
 
       cursor: pointer;
     }
