--- a/app/operations/expenses/page.module.scss
+++ b/app/operations/expenses/page.module.scss
@@ -56,7 +56,7 @@
       align-items: center;
       justify-content: flex-end;
 
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, var(--color-white) 80%);
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #ffffff 80%);
 
       cursor: pointer;
     }
@@ -239,5 +239,11 @@
     .check {
       margin-top: 10px;
     }
+  }
+}
+
+html[data-theme='dark'] {
+  .sign.expenses .shape {
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, var(--color-white) 80%);
   }
 }
