--- a/app/operations/income/page.module.scss
+++ b/app/operations/income/page.module.scss
@@ -38,38 +38,6 @@
   border-radius: 20px;
   padding-top: 30px;
 
-  &.expenses {
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    .shape {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      left: 0px;
-      height: 139px;
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-end;
-
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #ffffff 80%);
-
-      cursor: pointer;
-    }
-
-    &.bounded {
-      max-height: 563px;
-
-      .shape {
-        display: flex;
-      }
-    }
-  }
-
   .name {
     text-align: center;
     color: #9797a2;
@@ -120,8 +88,35 @@
 }
 
 .circles {
-  .circle {
+  margin: 0 auto;
+  margin-top: 30px;
+  width: 310px;
+  height: 232px;
+  display: flex;
+  justify-content: center;
+
+  .category {
     border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 3px;
+
+    .icon {
+      padding: 7px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 50%;
+    }
+
+    .check {
+      color: #ffffff;
+      display: none;
+    }
+
+    .name {
+      color: #ffffff;
+    }
   }
 }
 
