--- a/app/operations/expenses/page.module.scss
+++ b/app/operations/expenses/page.module.scss
@@ -216,6 +216,7 @@
       background-color: var(--color-orange);
       width: 8px;
       border-radius: 17px;
+      min-height: 1px;
 
       h5 {
         position: absolute;
