--- a/app/operations/income/page.module.scss
+++ b/app/operations/income/page.module.scss
@@ -94,6 +94,9 @@
   height: 232px;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 5px;
 
   .category {
     border-radius: 50%;
@@ -176,6 +179,45 @@
 
   .percent {
     font-weight: 700;
+  }
+}
+
+.columns {
+  position: relative;
+  margin: 0 30px;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  height: 289px;
+
+  &::before {
+    position: absolute;
+    content: '';
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: linear-gradient(180deg, rgba(0, 122, 255, 0.6) 0%, rgba(0, 122, 255, 0) 100%);
+  }
+
+  .column {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .line {
+      width: 8px;
+      height: 216px;
+      overflow: hidden;
+    }
+
+    h5 {
+      position: absolute;
+      bottom: -24px;
+      color: var(--color-grey);
+    }
   }
 }
 
