--- a/app/operations/income/page.module.scss
+++ b/app/operations/income/page.module.scss
@@ -198,19 +198,23 @@
     right: 0;
     top: 0;
     bottom: 0;
-    background: linear-gradient(180deg, rgba(0, 122, 255, 0.6) 0%, rgba(0, 122, 255, 0) 100%);
   }
 
   .column {
     position: relative;
     display: flex;
     flex-direction: column;
+    background: linear-gradient(180deg, rgba(0, 122, 255, 0.6) 0%, rgba(0, 122, 255, 0) 100%);
     align-items: center;
+    height: 100%;
+    width: 10px;
 
     .line {
-      width: 8px;
-      height: 216px;
-      overflow: hidden;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      background-color: var(--color-white);
     }
 
     h5 {
