--- a/app/operations/expenses/page.module.scss
+++ b/app/operations/expenses/page.module.scss
@@ -205,6 +205,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-end;
+    justify-content: center;
     gap: 2px;
     height: 289px;
 
