--- a/app/operations/income/page.module.scss
+++ b/app/operations/income/page.module.scss
@@ -189,6 +189,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-end;
+  justify-content: center;
   height: 289px;
 
   &::before {
