--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -100,7 +100,7 @@
 .cards {
   position: relative;
   z-index: 2;
-  overflow: hidden;
+  overflow: auto;
 
   &::-webkit-scrollbar {
     width: 0;
