--- a/app/operations/page.module.scss
+++ b/app/operations/page.module.scss
@@ -27,8 +27,8 @@
 .transactions {
   margin-top: 30px;
   display: flex;
-  flex-direction: column-reverse;
-  // gap: 20px;
+  flex-direction: column;
+  gap: 20px;
   padding: 0 10px;
   padding-bottom: var(--spacing-bottom);
 
@@ -64,17 +64,13 @@
 
   .list {
     display: flex;
-    flex-direction: column-reverse;
-    // gap: 30px;
+    flex-direction: column;
+    gap: 30px;
     margin-top: 10px;
     background-color: var(--color-white);
     padding: 15px;
     border-radius: 20px;
     box-shadow: 0px 12px 120px rgba(132, 139, 147, 0.12);
-
-    &:not(:first-of-type) {
-      margin-bottom: 20px;
-    }
 
     .item {
       position: relative;
@@ -82,8 +78,7 @@
       justify-content: space-between;
       align-items: center;
 
-      &:not(:first-of-type) {
-        margin-bottom: 30px;
+      &:not(:last-of-type) {
         &::before {
           position: absolute;
           content: '';
