--- a/components/Wrapper/Wrapper.module.scss
+++ b/components/Wrapper/Wrapper.module.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   padding-top: 25px;
   // max-width: 768px;
-  // max-width: 390px;
+  max-width: 390px;
   height: inherit;
   background-color: var(--bg-color);
 
