--- a/components/NewOperation/NewOperation.module.scss
+++ b/components/NewOperation/NewOperation.module.scss
@@ -102,8 +102,11 @@
                 border-radius: 15px;
                 overflow: hidden;
                 border: 1px solid var(--color-category-border);
-                width: 45px;
-                height: 45px;
+
+                &:not(&.active) {
+                    width: 46px;
+                    height: 46px;
+                }
 
                 &.active {
                     border: none;
